# app/Http/Controllers/PostController.php
@@ -2,157 +2,32 @@
 
 namespace App\Http\Controllers;
 
-use Illuminate\Http\Request;
 use App\Models\Post;
+use Illuminate\Http\Request;
 use Illuminate\Support\Facades\DB;
+use Illuminate\Support\Facades\Validator;
+
 class PostController extends Controller
 {
     /**
      * Display a listing of the resource.
-     */
-    /**
- * @OA\Get(
- *    path="/api/posts",
- *    summary="Get all posts",
- *    description="Get all posts without specifying an ID",
- *    tags={"Post"},
- *    @OA\Response(
- *        response=200,
- *        description="OK",
- *        @OA\JsonContent(
- *            type="array",
- *            @OA\Items(
- *                type="object",
- *                @OA\Property(property="id", type="integer"),
- *                @OA\Property(property="title", type="string"),
- *                @OA\Property(property="description", type="string")
- *            )
- *        )
- *    )
- *)
- *
- * @OA\Post(
- *     path="/api/posts",
- *     summary="Create a new post",
- *     description="Create a new post with the provided title and description",
- *     tags={"Post"},
- *     @OA\RequestBody(
- *         required=true,
- *         @OA\JsonContent(
- *             required={"title", "description"},
- *             @OA\Property(property="title", type="string", example="New Post Title"),
- *             @OA\Property(property="description", type="string", example="This is a new post description")
- *         )
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="OK",
- *         @OA\MediaType(
- *             mediaType="application/json"
- *         )
- *     )
- * )
- * 
- * @OA\Get(
- *     path="/api/posts/{id}",
- *     summary="Get post by ID",
- *     description="Get a post by its ID",
- *     tags={"Post"},
- *     @OA\Parameter(
- *         name="id",
- *         in="path",
- *         description="ID of the post to retrieve",
- *         required=true,
- *         @OA\Schema(
- *             type="integer"
- *         )
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="OK",
- *         @OA\JsonContent(
- *             type="object",
- *             @OA\Property(property="id", type="integer"),
- *             @OA\Property(property="title", type="string"),
- *             @OA\Property(property="description", type="string")
- *         )
- *     ),
- *     @OA\Response(
- *         response=404,
- *         description="Post not found"
- *     )
- * )
- * 
- * @OA\Put(
- *     path="/api/posts/{id}",
- *     summary="Update post",
- *     description="Update an existing post",
- *     tags={"Post"},
- *     @OA\Parameter(
- *         name="id",
- *         in="path",
- *         description="ID of the post to update",
- *         required=true,
- *         @OA\Schema(
- *             type="integer"
- *         )
- *     ),
- *     @OA\RequestBody(
- *         required=true,
- *         @OA\JsonContent(
- *             required={"title", "description"},
- *             @OA\Property(property="title", type="string", example="Updated Post Title"),
- *             @OA\Property(property="description", type="string", example="This is an updated post description")
- *         )
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="Post updated successfully"
- *     ),
- *     @OA\Response(
- *         response=404,
- *         description="Post not found"
- *     )
- * )
- * 
- * @OA\Delete(
- *     path="/api/posts/{id}",
- *     summary="Delete post",
- *     description="Delete an existing post",
- *     tags={"Post"},
- *     @OA\Parameter(
- *         name="id",
- *         in="path",
- *         description="ID of the post to delete",
- *         required=true,
- *         @OA\Schema(
- *             type="integer"
- *         )
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="Post deleted successfully"
- *     ),
- *     @OA\Response(
- *         response=404,
- *         description="Post not found"
- *     )
- * )
- */
-    public function index()
-    {
-        $posts = Post::all();
-        return response()->json($posts);
-    }
-
-    /**
-     * Show the form for creating a new resource.
      *
      * @return \Illuminate\Http\Response
      */
-    public function create()
+    /**
+     * @OA\Get(
+     *     path="/api/posts",
+     *     summary="Get all posts",
+     *     tags={"Posts"},
+     *     @OA\Response(response=200, description="All Post"),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
+    public function index()
     {
-        
+        return Post::all();
     }
 
     /**
@@ -161,19 +36,48 @@ class PostController extends Controller
      * @param  \Illuminate\Http\Request  $request
      * @return \Illuminate\Http\Response
      */
+    /**
+     * @OA\Post(
+     *     path="/api/posts",
+     *     summary="Create a new post",
+     *     description="Create a new post with the provided title and description",
+     *     tags={"Posts"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"title", "description"},
+     *             @OA\Property(property="title", type="string", example="New Post Title"),
+     *             @OA\Property(property="description", type="string", example="This is a new post description")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\MediaType(
+     *             mediaType="application/json"
+     *         )
+     *     )
+     * )
+     */
     public function store(Request $request)
     {
-
-           $validatedData = $request->validate([
-                'title' => 'required|unique:posts|min:5|max:10',
-                'description' => 'required|min:10|max:50'
-            ]);
-        $post = new Post();
-        $post->title = $validatedData['title'];
-        $post->description = $validatedData['description'];
-        $post->save();
-        return response()->json($post);
-        
+        $validator = Validator::make($request->all(), [
+            'title' => 'required|unique:posts|max:100|min:5',
+            'description' => 'required|max:50|min:10',
+        ], [
+            'title.required' => 'Title bắt buộc phải nhập',
+            'title.min' => 'Title phải từ :min ký tự trở lên',
+            'title.max' => 'Title phải từ :max ký tự trở lên',
+            'title.unique' => 'Title đã tồn tại trên hệ thống',
+            'description.required' => 'Description bắt buộc phải nhập',
+            'description.min' => 'Description phải từ :min ký tự trở lên',
+            'description.max' => 'Description phải từ :max ký tự trở lên',
+        ]);
+        if ($validator->fails()) {
+            $errors = $validator->errors()->all();
+            return response()->json($errors, 412);
+        }
+        return Post::create($request->all());
     }
 
     /**
@@ -182,21 +86,27 @@ class PostController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function show($id)
-    {
-        $post = Post::findOrFail($id);
-        return response()->json($post);
-    }
-
     /**
-     * Show the form for editing the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Get(
+     *     path="/api/posts/{id}",
+     *     summary="Get one posts",
+     *     tags={"Posts"},
+     *          @OA\Parameter(
+     *              name="id",
+     *               in="path",
+     *              description="Post ID",
+     *              required=true,
+     *              @OA\Schema(type="integer")
+     *          ),
+     *     @OA\Response(response=200, description="One Post"),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     *     security={{"bearerAuth":{}}}
+     * )
      */
-    public function edit($id)
+    public function show(Post $post)
     {
-        //
+        return $post;
     }
 
     /**
@@ -206,18 +116,55 @@ class PostController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function update(Request $request, $id)
+    /**
+     * @OA\Put(
+     *     path="/api/posts/{id}",
+     *     summary="Update post",
+     *     tags={"Posts"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Post ID",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(property="name", type="string", example="New Post Title"),
+     *                 @OA\Property(property="description", type="string", example="This is a new post description")
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response=200, description="Update Post"),
+     *     @OA\Response(response=400, description="Bad request"),
+     *     @OA\Response(response=404, description="Resource Not Found"),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
+    public function update(Request $request, Post $post)
     {
-        $request->validate([
-            'title' => 'required|min:5|max:10',
-            'description' => 'required|min:10|max:50'
-            ]);
-        $post = Post::find($id);
-        $post->title = $request->title;
-        $post->description = $request->description;
-        $post->save();
-
-        return response()->json('ok', 200);
+        $validator = Validator::make($request->all(), [
+            'title' => 'required|unique:posts|max:100|min:5',
+            'description' => 'required|max:50|min:10',
+        ], [
+            'title.required' => 'Title bắt buộc phải nhập',
+            'title.min' => 'Title phải từ :min ký tự trở lên',
+            'title.max' => 'Title phải từ :max ký tự trở lên',
+            'title.unique' => 'Title đã tồn tại trên hệ thống',
+            'description.required' => 'Description bắt buộc phải nhập',
+            'description.min' => 'Description phải từ :min ký tự trở lên',
+            'description.max' => 'Description phải từ :max ký tự trở lên',
+        ]);
+        if ($validator->fails()) {
+            $errors = $validator->errors()->all();
+            return response()->json($errors, 412);
+        }
+        $post->update($request->all());
+        return $post;
     }
 
     /**
@@ -226,10 +173,27 @@ class PostController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function destroy($id)
+    /**
+     * @OA\Delete(
+     *     path="/api/posts/{id}",
+     *     summary="Delete a specific post",
+     *     tags={"Posts"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Post ID",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),    
+     *     @OA\Response(response=200, description="Delete Post"),
+     *     @OA\Response(response=400, description="Bad request"),
+     *     @OA\Response(response=404, description="Resource Not Found"),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
+    public function destroy(Post $post)
     {
-        Post::findOrFail($id)->delete();
-        return response()->json("OK", 200);
+        $post->delete();
+        return "Delete success";
     }
-    
 }
