# routes/api.php
@@ -4,6 +4,9 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\PostController;
 use App\Http\Controllers\UserController;
+use App\Http\Controllers\PhoneController;
+
+
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -18,5 +21,6 @@ use App\Http\Controllers\UserController;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
-Route::resource('posts', PostController::class);
+// Route::resource('posts', PostController::class);
 Route::resource('users', UserController::class);
+Route::resource('phones', PhoneController::class);
