# storage/api-docs/api-docs.json
@@ -5,6 +5,42 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/phones/{id}": {
+            "get": {
+                "tags": [
+                    "phones"
+                ],
+                "summary": "Get a specific phone",
+                "operationId": "f55bb0f06d51973256452654a222c095",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the phone to retrieve",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Phoner Detail"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/posts": {
             "get": {
                 "tags": [
@@ -209,48 +245,34 @@
         "/api/users": {
             "get": {
                 "tags": [
-                    "User"
+                    "Users"
                 ],
                 "summary": "Get all users",
-                "description": "Get all users without specifying an ID",
                 "operationId": "c457726701591d1183b53aa71fc13441",
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "properties": {
-                                            "id": {
-                                                "type": "integer"
-                                            },
-                                            "name": {
-                                                "type": "string"
-                                            },
-                                            "email": {
-                                                "type": "string"
-                                            },
-                                            "password": {
-                                                "type": "string"
-                                            }
-                                        },
-                                        "type": "object"
-                                    }
-                                }
-                            }
-                        }
+                        "description": "All Users"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
-                    "User"
+                    "Users"
                 ],
-                "summary": "Create a new users",
-                "description": "Create a new users with the provided name, email and password",
-                "operationId": "07163db92a91a746cbdcf826b91c3857",
+                "summary": "Create a new user",
+                "description": "Create a new user with the provided username, email, and password",
+                "operationId": "592819a0265360b2014512d6dbfaf0e7",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -264,15 +286,20 @@
                                 "properties": {
                                     "name": {
                                         "type": "string",
-                                        "example": "New User Name"
+                                        "example": "honglam"
                                     },
                                     "email": {
                                         "type": "string",
-                                        "example": "user.1@gmail.com"
+                                        "format": "email",
+                                        "example": "example@gmail.com"
+                                    },
+                                    "number": {
+                                        "type": "string",
+                                        "example": "0987654321"
                                     },
                                     "password": {
                                         "type": "string",
-                                        "example": "user123"
+                                        "example": "password123"
                                     }
                                 },
                                 "type": "object"
@@ -282,10 +309,13 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "User created successfully",
-                        "content": {
-                            "application/json": {}
-                        }
+                        "description": "Create New User"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
                     }
                 }
             }
@@ -293,11 +323,10 @@
         "/api/users/{id}": {
             "get": {
                 "tags": [
-                    "User"
+                    "Users"
                 ],
-                "summary": "Get user by ID",
-                "description": "Get a user by its ID",
-                "operationId": "737deb2bc14244588d469d6a297c815b",
+                "summary": "Get a specific user",
+                "operationId": "36a33ff774d5cba33c039dec2c3e0287",
                 "parameters": [
                     {
                         "name": "id",
@@ -311,46 +340,32 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "id": {
-                                            "type": "integer"
-                                        },
-                                        "name": {
-                                            "type": "string"
-                                        },
-                                        "email": {
-                                            "type": "string"
-                                        },
-                                        "password": {
-                                            "type": "string"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
+                        "description": "User Detail"
+                    },
+                    "400": {
+                        "description": "Bad request"
                     },
                     "404": {
-                        "description": "User not found"
+                        "description": "Resource Not Found"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
-                    "User"
+                    "Users"
                 ],
-                "summary": "Update user",
-                "description": "Update an existing user",
-                "operationId": "ba13c6d3d65a678587698e0ae744c454",
+                "summary": "Update a specific user",
+                "operationId": "b9091397c8b25f12c6adb74be6ce3a5a",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "ID of the user to update",
+                        "description": "User ID",
                         "required": true,
                         "schema": {
                             "type": "integer"
@@ -362,23 +377,19 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "name",
-                                    "email",
-                                    "password"
-                                ],
                                 "properties": {
                                     "name": {
                                         "type": "string",
-                                        "example": "Updated User Name"
+                                        "example": "john_doe"
                                     },
                                     "email": {
                                         "type": "string",
-                                        "example": "updated.user@gmail.com"
+                                        "format": "email",
+                                        "example": "john@example.com"
                                     },
                                     "password": {
                                         "type": "string",
-                                        "example": "updated123"
+                                        "example": "password123"
                                     }
                                 },
                                 "type": "object"
@@ -388,25 +399,32 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "User updated successfully"
+                        "description": "Update user"
+                    },
+                    "400": {
+                        "description": "Bad request"
                     },
                     "404": {
-                        "description": "User not found"
+                        "description": "Resource Not Found"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
-                    "User"
+                    "Users"
                 ],
-                "summary": "Delete user",
-                "description": "Delete an existing user",
-                "operationId": "53ac43be4ab7188723c4ae0f48c097d2",
+                "summary": "Delete a specific user",
+                "operationId": "fa56cffde745d3f152f95cbacd936c0b",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "ID of the user to delete",
+                        "description": "User ID",
                         "required": true,
                         "schema": {
                             "type": "integer"
@@ -415,12 +433,20 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "User deleted successfully"
+                        "description": "Delate user"
+                    },
+                    "400": {
+                        "description": "Bad request"
                     },
                     "404": {
-                        "description": "User not found"
+                        "description": "Resource Not Found"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         }
     }
